--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@yudiel/react-qr-scanner": "^2.3.1",
     "axios": "^1.9.0",
     "framer-motion": "^11.0.8",
     "jsqr": "^1.4.0",
