--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qr-reader": "^2.2.1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.12.2",
     "tailwindcss": "^3.4.1"
